--- a/Import/OutageText.css
+++ b/Import/OutageText.css
@@ -4,5 +4,15 @@
 
 #app-mount > div.tooltips div.tooltip-right.tooltip-red strong:before {
     font-size: 14px;
-    content: "something";
+    content: "There are ";
+}
+
+
+#app-mount > div.tooltips div.tooltip-right.tooltip-red strong {
+    font-size: 14px;
+}
+
+#app-mount > div.tooltips div.tooltip-right.tooltip-red strong:after {
+    font-size: 14px;
+    content: " Guild(s) with outages. You idiot.";
 }
