--- a/Import/Outage.css
+++ b/Import/Outage.css
@@ -1,22 +1,20 @@
 @charset "UTF-8";
 
 .guilds-wrapper .guilds-error::after{
+    font-size: 20px;
     content: "";
-    text-indent: 0%;
-    background-image: url(https://completelyunbelievable.github.io/ChangeOutage/Image/BD%20Logo.png);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/97/Crystal_Project_Lock.png);
     background-size: 25px 25px;
+    background-repeat: no-repeat;
+    background-position: center; 
     position: absolute;
     right: 0;
     left: 0;
     bottom: 0;
     width: 50px;
     height: 50px;
-    background-repeat: no-repeat;
-    background-position: center; 
 }
-
+/*Hides the exclamation point text so it can be replaced without issue.*/
 .guilds-wrapper .guilds-error{
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
+    font-size: 0;
 }
