--- a/ChangeOutage/Outage.css
+++ b/ChangeOutage/Outage.css
@@ -1,6 +1,5 @@
-@charset "UTF-8";
-
-.guilds-wrapper .guilds-error::after{
+/*For changing the guild outage exclamation point to a different image or text.*/
+.guilds-wrapper .guilds-error::after {
     font-size: 20px;
     content: "";
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/97/Crystal_Project_Lock.png);
@@ -14,7 +13,27 @@
     width: 50px;
     height: 50px;
 }
-/*Hides the exclamation point text so it can be replaced without issue.*/
-.guilds-wrapper .guilds-error{
+
+.guilds-wrapper .guilds-error {
     font-size: 0;
+}
+
+
+/*For changing the guild outage tool tip*/
+#app-mount > div.tooltips div.tooltip-right.tooltip-red {
+    font-size: 0;
+}
+
+#app-mount > div.tooltips div.tooltip-right.tooltip-red strong:before {
+    font-size: 14px;
+    content: "There are ";
+}
+
+#app-mount > div.tooltips div.tooltip-right.tooltip-red strong {
+    font-size: 14px;
+}
+
+#app-mount > div.tooltips div.tooltip-right.tooltip-red strong:after {
+    font-size: 14px;
+    content: " Guild(s) with outages.";
 }
