--- a/Guilds Bar/Guilds.css
+++ b/Guilds Bar/Guilds.css
@@ -49,3 +49,8 @@
     height: 5px; /*10px*/
     margin-top: -3px; /*-6px*/
 }
+
+.guilds-wrapper .guilds .guild.selected:before {
+    height: 20px; /*40px*/
+    margin-top: -10px; /*-20px*/
+}
