--- a/GuildsBar/Guilds.css
+++ b/GuildsBar/Guilds.css
@@ -4,8 +4,8 @@
 }
 
 .guilds-wrapper .guilds .guild .guild-inner a {
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background-size: 100% 100%; /*NA*/
+    background-repeat: no-repeat; /*NA*/
     font-size: 7px !important; /*14px*/
     text-align: center; /*NA*/
     vertical-align: middle; /*NA*/
