--- a/ChangeOutage/raw/Outage.css
+++ b/ChangeOutage/raw/Outage.css
@@ -1,4 +1,6 @@
-/*For changing the guild outage exclamation point to a different image or text.*/
+/*For changing the guild outage exclamation point to a different image or text.
+Change to "background-image: transparent;" if you don't want to have a background image.
+Change content to whatever you want the text to be, might not fit unless you modify the font size.*/
 .guilds-wrapper .guilds-error::after {
     font-size: 20px;
     content: "";
@@ -15,13 +17,13 @@
 }
 
 .guilds-wrapper .guilds-error {
-    font-size: 0;
+    font-size: 0; /*Hides exclamation point*/
 }
 
 
 /*For changing the guild outage tool tip text.*/
 #app-mount > div.tooltips div.tooltip-right.tooltip-red {
-    font-size: 0;
+    font-size: 0; /*Removes the old tooltip text.*/
 }
 
 #app-mount > div.tooltips div.tooltip-right.tooltip-red strong:before {
@@ -30,7 +32,7 @@
 }
 
 #app-mount > div.tooltips div.tooltip-right.tooltip-red strong {
-    font-size: 14px;
+    font-size: 14px; /*default is 14px, change to 0px if you dont want the number of guilds with outages to be visable.*/
 }
 
 #app-mount > div.tooltips div.tooltip-right.tooltip-red strong:after {
