--- a/GuildsBar/Guilds.css
+++ b/GuildsBar/Guilds.css
@@ -1,4 +1,3 @@
-
 .guilds-wrapper .guilds .guild, .guilds-wrapper .guilds .guild .guild-inner a, .guilds-wrapper .guilds .friends-icon {
     height: 25px; /*50px*/
     width: 25px; /*50px*/
@@ -75,5 +74,5 @@
 
 .guilds-wrapper .icon-2aINcz {
     height: 6px; /*12px*/
-    width: 6px; /*12*/
+    width: 6px; /*12px*/
 }
