--- a/GuildsBar/Guilds.css
+++ b/GuildsBar/Guilds.css
@@ -74,7 +74,7 @@
 
 .guilds-wrapper .icon-2aINcz {
     height: 6px; /*12px*/
-    width: 6px; /*12*/
+    width: 6px; /*12px*/
 }
 
 .guilds-wrapper .guilds .guild.audio .guild-inner:after, .guilds-wrapper .guilds .guild.video .guild-inner:after {
