--- a/GuildsBar/HalfGuildsBar.theme.css
+++ b/GuildsBar/HalfGuildsBar.theme.css
@@ -8,7 +8,6 @@
 .guilds-wrapper .guilds .guild .guild-inner a {
     background-size: 100% 100%; /*NA*/
     background-repeat: no-repeat; /*NA*/
-    font-size: 7px; /*14px*/
     text-align: center; /*NA*/
     vertical-align: middle; /*NA*/
 }
@@ -94,4 +93,8 @@
 
 .guilds-wrapper > div.unread-mentions-indicator-top > div.active-1SSsBb {
     transform: translateY(0%) !important; /*0%*/
+}
+
+.guilds-wrapper .guilds .guild .guild-inner a {
+    font-size: 7px !important; /*14px*/
 }
