--- a/ChangeOutage/ChangeOutage.theme.css
+++ b/ChangeOutage/ChangeOutage.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"ChangeOutage","description":"Changes the exclamation point in Discord guild outages to the Better Discord logo. It's sad if you see this often enough that you want to be able to change it.","author":"CompletelyUnbelievable","version":"1.0"}*//
+//META{"name":"ChangeOutage","description":"Changes the exclamation point in Discord guild outages to the Better Discord logo. It's sad if you see this often enough that you want to be able to change it.","author":"CompletelyUnbelievable","version":"1.0","source":"https://github.com/CompletelyUnbelievable/ThemeResource/edit/master/ChangeOutage","website":"https://git.io/vhWjm"}*//
 
 /*For changing the guild outage exclamation point to a different image or text.
 Change to "background-image: transparent;" if you don't want to have a background image.
