--- a/DiscordLogo/raw/DiscordLogo.css
+++ b/DiscordLogo/raw/DiscordLogo.css
@@ -1,14 +1,15 @@
 /*removes the discord logo svg (image)*/
-#app-mount > div.typeWindows-1za-n7.titleBar-AC4pGV.horizontalReverse-3tRjY7.flex-1O1GKY.directionRowReverse-m8IjIq.justifyStart-2NDFzi.alignStretch-DpGPf3 > div.wordmark-2iDDfm > svg > path {
-    display: none;
+.wordmark-2iDDfm svg path {
+	display: none;
+	fill: transparent;
 }
 
 /*replaces the discord logo svg (image) with another image, in this case it's a different Discord Logo.*/
-#app-mount > div.typeWindows-1za-n7.titleBar-AC4pGV.horizontalReverse-3tRjY7.flex-1O1GKY.directionRowReverse-m8IjIq.justifyStart-2NDFzi.alignStretch-DpGPf3 > div.wordmark-2iDDfm > svg {
-    content: "";
-    background-image: url("https://raw.githubusercontent.com/CompletelyUnbelievable/ThemeResource/master/DiscordLogo/Images/DiscordLogo.png");
-    background-size: contain; /*Or Cover*/
-    background-repeat: no-repeat;
-    width: 100px; /*55px*/
-    height: 16px; /*default*/
+.wordmark-2iDDfm {
+	content: "";
+	background-image: url("https://raw.githubusercontent.com/CompletelyUnbelievable/ThemeResource/master/DiscordLogo/Images/DiscordLogo.png");
+	background-size: contain; /*Or Cover*/
+	background-repeat: no-repeat;
+	width: 100px; /*55px*/
+	height: 16px; /*default*/
 }
