--- a/TitlebarFix/TitlebarFix.theme.css
+++ b/TitlebarFix/TitlebarFix.theme.css
@@ -1,1 +1,2 @@
-placeholder
+//META{"name":"TitlebarFix","description":"","author":"CompletelyUnbelievable","version":"Alpha","source":"https://github.com/CompletelyUnbelievable/ThemeResource","website":"https://git.io/vhWjm"}*//
+
