--- a/GuildsBar/ReplaceHomeButton.theme.css
+++ b/GuildsBar/ReplaceHomeButton.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"ReplaceHomeButton","description":"Allows easy replacement for the background of the home button.","author":"CompletelyUnbelievable","version":"Alpha","source":"https://github.com/CompletelyUnbelievable/ThemeResource","website":"https://git.io/vhWjm"}*//
+//META{"name":"ReplaceHomeButton","description":"Allows easy replacement for the background of the home button.","author":"CompletelyUnbelievable","version":"1.0","source":"https://github.com/CompletelyUnbelievable/ThemeResource","website":"https://git.io/vhWjm"}*//
 
 /*For replacing the background, just replace the url in-between the parenthesis. If you are using a rather solid image, not an icon as in this example, then the background-size property will need to be changed to something else.*/
 #app-mount .guilds-wrapper .guilds .home-icon {
