Update and rename TBD.theme.css to RecolorCategories.theme.css

--- a/ChannelsSideBar/RecolorCategories.theme.css
+++ b/ChannelsSideBar/RecolorCategories.theme.css
@@ -1,3 +1,6 @@
+//META{"name":"RecolorCategories","description":"Allows easy replacement for the background of the home button.","author":"CompletelyUnbelievable","version":"1.0","source":"https://github.com/CompletelyUnbelievable/ThemeResource","website":"https://git.io/vhWjm"}*//
+
+
 /*Color of all channel categories on Hover*/
 #app-mount .iconHovered-2L3-fB, #app-mount .iconHoveredCollapsed-3caIIZ, #app-mount .nameHovered-1gxhWH, #app-mount .nameHoveredCollapsed-2orEWB {
     color: red;
