--- a/GeneralImprovements/GISepTitlebarAndBG.theme.css
+++ b/GeneralImprovements/GISepTitlebarAndBG.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"GISepTitlebarAndBackground","description":"Allows for seperate titlebar background colors and seperate background images for the light and dark themes.","author":"CompletelyUnbelievable","version":"1.0","source":"https://github.com/CompletelyUnbelievable/ThemeResource/edit/master/GeneralImprovements","website":"https://git.io/vhWjm"}*//
+//META{"name":"GISepTitlebarAndBG","description":"Allows for seperate titlebar background colors and seperate background images for the light and dark themes.","author":"CompletelyUnbelievable","version":"1.0","source":"https://github.com/CompletelyUnbelievable/ThemeResource/edit/master/GeneralImprovements","website":"https://git.io/vhWjm"}*//
 @import url("https://completelyunbelievable.github.io/TransparencyQuick/Import/TransparencyQuick.css");
 
 
