--- a/GeneralImprovements/GISepTitlebarAndBG.theme.css
+++ b/GeneralImprovements/GISepTitlebarAndBG.theme.css
@@ -40,12 +40,12 @@
 
 /*Sets the background color of the titlebar in dark theme.*/
 .app.theme-dark::before {
-	background-color: var(--DarkTitlebarColor, var(--FallbackColor, transparent));
+	background: var(--DarkTitlebarColor, var(--FallbackColor, transparent));
 }
 
 /*Sets the background color of the titlebar in light theme.*/
 .app.theme-light::before {
-	background-color: var(--LightTitlebarColor, var(--FallbackColor, transparent));
+	background: var(--LightTitlebarColor, var(--FallbackColor, transparent));
 }
 
 /*Sets the background image of the discord window in dark theme.*/
