--- a/HomeMenu/GamesMenuTransparency.css
+++ b/HomeMenu/GamesMenuTransparency.css
@@ -1,4 +1,8 @@
 /*Modified from one of Sato's posts, Makes the card boxes in the Games Menu Semi-transparent or translucent. Sato's code required importance this does not.*/
-#app-mount .headerBar-UHpsPw, #app-mount .activityFeed-28jde9, .header-1RC2Wb, #app-mount .card-7JP0BX, #app-mount .body-SKIE6r {
+#app-mount .headerBar-UHpsPw, #app-mount .activityFeed-28jde9, .header-1RC2Wb, #app-mount .card-7JP0BX {
     background: transparent;
+}
+
+#app-mount .body-SKIE6r {
+    /*Already translucent*/
 }
