--- a/GeneralImprovements/GISepTitlebarAndBG.theme.css
+++ b/GeneralImprovements/GISepTitlebarAndBG.theme.css
@@ -19,7 +19,7 @@
 
 
 /*Fixes the sizing of the titlebar as well as sets it's background color transparent so we can change the background color with dark/light theme selectors.*/
-#app-mount > .titleBar-AC4pGV {
+.da-appMount .da-titleBar {
 	padding-top: 4px;
 	margin-top: 0px;
 	background-color: transparent;
@@ -38,23 +38,23 @@
 }
 
 /*Sets the background color of the titlebar in dark theme.*/
-.app.theme-dark::before {
+.da-app > .theme-dark::before {
 	background: var(--DarkTitlebarColor, var(--FallbackColor, transparent));
 }
 
 /*Sets the background color of the titlebar in light theme.*/
-.app.theme-light::before {
+.da-app > .theme-light::before {
 	background: var(--LightTitlebarColor, var(--FallbackColor, transparent));
 }
 
 /*Sets the background image of the discord window in dark theme.*/
-.app.theme-dark {
+.da-app > .theme-dark {
 	background: var(--DarkBackground, var(--FallbackColor, transparent));
 	background-size: var(--BackgroundFill, 100% 100%);
 }
 
 /*Sets the background image of the discord window in light theme.*/
-.app.theme-light {
+.da-app > .theme-light {
 	background: var(--LightBackground, var(--FallbackColor, transparent));
 	background-size: var(--BackgroundFill, 100% 100%);
 }
