--- a/GuildsBar/HalfGuildsBar.theme.css
+++ b/GuildsBar/HalfGuildsBar.theme.css
@@ -1,84 +1,84 @@
-//META{"name":"Half Sized Guilds Bar","description":"Decreases everything within the guilds area by about half.","author":"CompletelyUnbelievable","version":"1.0","source":"https://github.com/CompletelyUnbelievable/ThemeResource","website":"https://git.io/vhWjm"}*//
+//META{"name":"HalfSizedGuildsBar","description":"Decreases everything within the guilds area by about half.","author":"CompletelyUnbelievable","version":"1.0","source":"https://github.com/CompletelyUnbelievable/ThemeResource","website":"https://git.io/vhWjm"}*//
 
-.guilds-wrapper .iconSizeLarge-161qtT, .guilds-wrapper .guilds .guild, .guilds-wrapper .guilds .guild .guild-inner a, .guilds-wrapper .guilds .friends-icon {
+.da-guildsWrapper .da-iconSizeLarge, .da-guildsWrapper .da-guilds .guild-1EfMGQ:not(#bd-pub-li), .da-guildsWrapper .da-guilds .guild-1EfMGQ:not(#bd-pub-li) .da-guildInner a, .da-guildsWrapper .da-guilds .da-homeIcon {
 	height: 25px; /*50px*/
 	width: 25px; /*50px*/
 }
 
-.guilds-wrapper .guilds .guild .guild-inner a {
+.da-guildsWrapper .da-guilds .guild-1EfMGQ:not(#bd-pub-li) .da-guildInner a {
 	background-size: 100% 100%; /*NA*/
 	background-repeat: no-repeat; /*NA*/
 	text-align: center; /*NA*/
 	vertical-align: middle; /*NA*/
 }
 
-.guilds-wrapper {
+.da-guildsWrapper {
 	width: 45px; /*70px*/
 }
 
-.guilds-wrapper .guilds .friends-icon {
+.da-guildsWrapper .da-guilds .da-homeIcon {
 	background-size: 16px 14px; /*32px 28px*/
 }
 
-.guilds-wrapper .guilds .friends-online {
+.da-guildsWrapper .da-guilds .da-friendsOnline {
 	width: 25px; /*50px*/
 	font-size: 5px; /*10px*/
 }
 
-.guilds-wrapper .guild-separator {
+.da-guildsWrapper .da-guildSeparator {
 	width: 25px /*50px*/
 }
 
-.guilds-wrapper .guilds-add-inner {
+.da-guildsWrapper .da-guildsAddInner {
 	font-size: 25px; /*100%*/
 	text-align: center; /*NA*/
 	vertical-align: middle; /*NA*/
-	top: -19px; /*-1px*/
+	top: -18px; /*-1px*/
 }
 
-.guilds-wrapper .guilds .guild .guild-inner {
+.da-guildsWrapper .da-guilds .guild-1EfMGQ:not(#bd-pub-li) .da-guildInner {
 	line-height: 25px; /*50px*/
 }
 
-.guilds-wrapper .badge {
+.da-guildsWrapper .badge-1GsMF2 {
 	font-size: 6px; /*12px*/
 	line-height: 6px; /*12px*/
 	padding: 1.5px 3px; /*3px 6px*/
 }
 
-.guilds-wrapper .guilds .guild.unread:before {
+.da-guildsWrapper .da-guilds .guild-1EfMGQ.unread-qLkInr:before { /**/
 	height: 5px; /*10px*/
 	margin-top: -3px; /*-6px*/
 }
 
-.guilds-wrapper .guilds .guild.selected:before {
+.da-guildsWrapper .da-guilds .guild-1EfMGQ.selected-ML3OIq:before {
 	height: 20px; /*40px*/
 	margin-top: -10px; /*-20px*/
 }
 
-.guilds-wrapper .guilds-error {
+.da-guildsWrapper .da-guildsError {
 	font-size: 10px; /*20px*/
 	width: 25px; /*50px*/
 	height: 25px; /*50px*/
 	line-height: 23px; /*46px*/
 }
 
-.guilds-wrapper .unread-mentions-indicator-bottom, .guilds-wrapper .unread-mentions-indicator-top {
+.da-guildsWrapper .da-unreadMentionsIndicatorBottom, .da-guildsWrapper .da-unreadMentionsIndicatorTop {
 	height: 10px; /*20px*/
 }
 
-.guilds-wrapper .bar-30k2ka {
+.da-guildsWrapper .da-unreadMentionsIndicatorBottom .bar-30k2ka, .da-guildsWrapper .da-unreadMentionsIndicatorTop .bar-30k2ka {
 	font-size: 5px; /*11px*/
 	height: 10px; /*20px*/
 	line-height: 7px /*14px*/
 }
 
-.guilds-wrapper .icon-2aINcz {
+.da-guildsWrapper .icon-2aINcz { 
 	height: 6px; /*12px*/
 	width: 6px; /*12px*/
 }
 
-.guilds-wrapper .guilds .guild.audio .guild-inner:after, .guilds-wrapper .guilds .guild.video .guild-inner:after {
+.da-guildsWrapper .da-guilds .guild-1EfMGQ.audio .da-guildInner:after, .da-guildsWrapper .da-guilds .guild-1EfMGQ.video .da-guildInner:after {
 	background-size: 8px; /*16px*/
 	height: 12px; /*24px*/
 	width: 12px; /*24px*/
@@ -86,23 +86,55 @@
 	top: -3px; /*-6px*/
 }
 
-.noIcon-1a_FrS.iconSizeLarge-161qtT {
+.da-noIcon.da-iconSizeLarge {
 	line-height: 25px; /*50px*/
 }
 
+.da-guildsWrapper .da-scrollerWrap {
+	width: 44px; /*88px*/
+}
+
+.da-appMount .da-guildsWrapper .scroller-wrap .scroller::-webkit-scrollbar {
+	width: 0px; /*14*/
+}
+
+
+
 /*These must have "!important" in order to work.*/
-#app-mount .guilds-wrapper > div.unread-mentions-indicator-top > div.unread-1xRYoj {
+
+#bd-pub-li, #RANbutton-frame {
+	height: 10px !important; /*20px*/
+	width: 12.5px; /*25px*/
+}
+
+#bd-pub-li .da-guildInner, #RANbutton-frame .da-guildInner {
+	height: 10px !important; /*20px*/
+	width: 25px; /*25px*/
+	overflow: visible;
+}
+
+#bd-pub-li .da-guildInner a, #RANbutton-frame .da-guildInner a {
+	height: 25px; /*50px*/
+	width: 25px; /*50px*/
+}
+
+#bd-pub-li #bd-pub-button, #RANbutton-frame #RANbutton {
+	font-size: 6px !important; /*12px*/
+	line-height: 10px !important; /*20px*/
+}
+
+.da-appMount .da-guildsWrapper > .da-unreadMentionsIndicatorTop > .unread-1xRYoj {
 	transform: translateY(-300%) !important; /*-150%*/
 }
 
-.guilds-wrapper > div.unread-mentions-indicator-top > div.active-1SSsBb {
+.da-guildsWrapper > .da-unreadMentionsIndicatorTop > .active-1SSsBb {
 	transform: translateY(0%) !important; /*0%*/
 }
 
-.guilds-wrapper .guilds .guild .guild-inner a {
+.da-guildsWrapper .da-guilds .guild-1EfMGQ:not(#bd-pub-li) .da-guildInner a {
 	font-size: 7px !important; /*14px*/
 }
 
-.guilds-wrapper .guilds .guild-icon {
+.da-guildsWrapper .da-guilds .da-guildIcon {
 	font-size: 9px !important; /*18px*/
 }
