--- a/SensitiveInformation/DisguiseEmail.css
+++ b/SensitiveInformation/DisguiseEmail.css
@@ -1,10 +1,10 @@
 /*Hides Email completely.*/
-#app-mount .userSettingsAccount-2eMFVR div:nth-child(2) > div:nth-child(2) > .viewBody-2Qz-jg {
+.da-appMount .da-userSettingsAccount div:nth-child(2) > div:nth-child(2) > .da-viewBody {
 	font-size: 0;
 }
 
 /*Replaces the Email Text with something else.*/
-#app-mount .userSettingsAccount-2eMFVR div:nth-child(2) > div:nth-child(2) > .viewBody-2Qz-jg:after {
+.da-appMount .da-userSettingsAccount div:nth-child(2) > div:nth-child(2) > .da-viewBody:after {
 	content: "Name@Place.com";
 	font-size: 14.7px;
 }
