--- a/GuildsBar/GradientHomeIcon.theme.css
+++ b/GuildsBar/GradientHomeIcon.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"GradientHomeIconTest","description":"Changes the home button logo into a linear gradient.","author":"CompletelyUnbelievable","version":"1.0","source":"https://github.com/CompletelyUnbelievable/ThemeResource","website":"https://git.io/vhWjm"}*//
+//META{"name":"GradientHomeIcon","description":"Changes the home button logo into a linear gradient.","author":"CompletelyUnbelievable","version":"1.1","source":"https://github.com/CompletelyUnbelievable/ThemeResource","website":"https://git.io/vhWjm"}*//
 
 :root {
 	--mask: url(https://raw.githubusercontent.com/CompletelyUnbelievable/ThemeResource/master/GuildsBar/Images/Moving_Discord_Logo.gif) no-repeat 50% 50%;
