--- a/GuildsBar/ChangeOutage.theme.css
+++ b/GuildsBar/ChangeOutage.theme.css
@@ -6,9 +6,8 @@
 	/*uncomment this line to replace the text instead of hiding the text.*/
 	//--outagetext: "!";
 
-	/*Uncomment the two lines below if using VariableServerGrid.*/
+	/*Uncomment the line below to fix sizing while using VariableServerGrid.*/
 	//--outageimagesize: calc(50% - 3.9915px) calc(50% - 3.9915px);
-	//--outagemargin: 4px;
 }
 
 
@@ -16,8 +15,10 @@
 Change to "background-image: transparent;" if you don't want to have a background image.
 Change content to whatever you want the text to be, might not fit unless you modify the font size.*/
 .da-guildsWrapper .da-guildsError::after {
-	font-size: 20px;
 	content: var(--outagetext, '');
+	line-height: 56px;
+	font-size: 20px;
+	text-align: center;
 	background: var(--outageicon, transparent);
 	background-size: var(--outageimagesize, 50% 50%);
 	background-repeat: no-repeat;
