--- a/GeneralImprovements/GISepTitlebarAndBG.theme.css
+++ b/GeneralImprovements/GISepTitlebarAndBG.theme.css
@@ -38,23 +38,23 @@
 }
 
 /*Sets the background color of the titlebar in dark theme.*/
-.da-app > .theme-dark::before {
+.app.theme-dark::before {
 	background: var(--DarkTitlebarColor, var(--FallbackColor, transparent));
 }
 
 /*Sets the background color of the titlebar in light theme.*/
-.da-app > .theme-light::before {
+.app.theme-light::before {
 	background: var(--LightTitlebarColor, var(--FallbackColor, transparent));
 }
 
 /*Sets the background image of the discord window in dark theme.*/
-.da-app > .theme-dark {
+.app.theme-dark {
 	background: var(--DarkBackground, var(--FallbackColor, transparent));
 	background-size: var(--BackgroundFill, 100% 100%);
 }
 
 /*Sets the background image of the discord window in light theme.*/
-.da-app > .theme-light {
+.app.theme-light {
 	background: var(--LightBackground, var(--FallbackColor, transparent));
 	background-size: var(--BackgroundFill, 100% 100%);
 }
