--- a/GeneralImprovements/ContentImprovements.theme.css
+++ b/GeneralImprovements/ContentImprovements.theme.css
@@ -4,3 +4,9 @@
 	margin-top: -22px;
 	padding-top: 22px;
 }
+
+.titleBar-AC4pGV {
+	background: transparent; /*#202225*/
+	padding-top: 4px;
+	margin: 0;
+}
