--- a/HomeMenu/HideLibrarynStore.css
+++ b/HomeMenu/HideLibrarynStore.css
@@ -1,3 +1,3 @@
-.channel-2fhmY8 a[href="/library"], .channel-2fhmY8 a[href="/store"] {
+.channel-2QD9_O a[href="/library"], .channel-2QD9_O a[href="/store"] {
 	display: none;
 }
